--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "gh-pages": "^3.2.3",
+    "jwt-decode": "^3.1.2",
     "mobx": "^6.3.7",
     "mobx-react-lite": "^3.2.2",
     "node-sass": "^6.0.1",
